public/stylesheets/style.css
html {
  width: 100%;
  height: 100%;
}
body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  margin: 0;
  color: darkslategrey;
  height: 100%;
  overflow-x: hidden;

}
.item-description-wrapper {
  color: darkslategrey;
  display: flex;
  max-width: 100%;
  min-height: 80%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.item-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
}
.delete-item-button button {
  background-color: darkslategrey;
  color: whitesmoke;
  border-radius: 1rem;
  padding: 5px 50px;
}
.delete-item-button button:hover {
  cursor: pointer;
  background-color: whitesmoke;
  color: darkslategrey;
  border-color: darkslategrey;
}
.manga-click-div {
  text-decoration: none;
  width: 24%;
  height: 50%;
  color: darkslategrey;
}
.full-manga-section {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  padding-top: 10px;
  padding-left: 10px;
  gap: 5px;
}
.manga-card {
  width: 100%;
  height: 100%;
  border: 1px solid whitesmoke;
  border-radius: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}
.manga-categories {
  width: 100%;
  overflow: hidden;
}
.manga-cat-text-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 95%;
  padding-left: 10px;
  padding-right: 10px;
  gap: 5px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.manga-cat-text {
  display: block;
  font-weight: 100;  
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;

}
#manga-cat-spacer {
  padding-right: 10px;
}
nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  background-color: darkslategray;
  color: whitesmoke;
  height: 5%;
  padding-top: 10px;
  padding-bottom: 10px;
}

.nav-button {
  text-decoration: none;
  color: whitesmoke;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 1rem;
}

.nav-button:hover {
  cursor: pointer;
  color: darkslategrey;
  background-color: whitesmoke;
}

.create-item-container {
  height: 80vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.create-item-container h1 {
  color: darkslategrey;
}
.create-form {
  width: 100%;
}
.create-form form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
}
.create-form form input {
  width: 50%;
  height: 25px;
  color: darkslategrey;
}
.create-form form input[type=submit] {
  background-color: darkslategrey;
  color: whitesmoke;
  border-radius: 1rem;
  padding: 5px 0px;
}
.create-form form input[type=submit]:hover {
  cursor: pointer;
  background-color: whitesmoke;
  color: darkslategrey;
  border-color: darkslategray;
} 
.rec-container {
  width: 50%;
  transform: translateX(0%) translateY(-4%);
  position: absolute;
  background-color: rgba(47,79,79, 0.8);
  color: white;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  z-index: 999;
}


.rec-card {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 75px;
  gap: 10px;
}

.rec-card:hover {
  cursor: pointer;
  background-color: rgba(47,79,79,0.8);
}
.rec-card h3 {
  width: 30%;
}
.rec-card img {
  max-width: auto;
  height: 100%;
}

.rec-card p {
  width: 60%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.category-list-and-number {
  display: flex;
  justify-content: center;
  gap: 25px;
  align-items: center;
  flex-direction: row;
  width: 10%;
  height: 10%;
  text-decoration: none;
  color: darkslategrey;
  border: 1px solid whitesmoke;
}
.category-list-and-number:hover {
  cursor: pointer;
}
.category-list-wrapper {
  display: flex;
  justify-content: flex-start; 
  align-content: flex-start;
  flex-direction: row;
  flex-wrap: wrap;
  width:80%;
  height: 100%;
  margin: 0 auto;
}
.individual-categories {
  display: flex;
}
.select-update-item {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  gap: 20px;  
  width: 100%;
  color: darkslategrey;
}

.update-items-wrapper {
  display:flex; 
  justify-content: space-between;
  align-items: center;
  width: 100%;
  height: 100%;
}

#update-item-desc {
  padding-left: 25px;
}

.pre-updated-item {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: left;
  width: 50%;
  height: 80%;
}
.update-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 50%;
  height: 80%;
  gap: 50px;
}
.update-form form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 60%;
}

.update-item-field input[type=submit] {
  background-color: darkslategrey;
  color: whitesmoke;
  border-radius: 1rem;
  padding: 5px;
}

.update-item-field input[type=submit]:hover {
  background-color: whitesmoke;
  color: darkslategrey;
  border-color: darkslategrey;
  cursor: pointer;
}

.manga-list-categories-select {
  text-decoration: none;
  color: darkslategrey;
}

.price-and-stock {
  width: 100%;
  display: flex;
  justify-content: center;
}

.price-and-stock p {
  width: 50%;
  text-align: center;
}

.card-header {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-self: flex-start;
  margin-left: 10px;
  width: 98%;
  max-height: 70%;
}
.card-header h1 {
  margin-bottom: 0;
}
.card-header p {
  display: -webkit-box;
  margin-top: 0;
  font-size: 1em;
  width: 100%;
  -webkit-line-clamp: 4;
  -webkit-box-orient: vertical;
  overflow: hidden;
}
.card-names {
  display: flex;
  justify-content: center;
  width: 100%;
  color: grey;
}

#publisher-header {
  text-align: left;
}
#author-header {
  text-align: right;
  padding-right: 15px;
}
.card-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 32%;
  height: 50%;
}

.card-img {
  width:  100%;
  height: auto;
}
.item-information {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 50%;
}

.view-manga-picture {
  height: auto;
  max-width: 20%;
}

.sbs-details {
  max-width: 100%;
  min-width: 50%;
  display: flex;
  justify-content: space-around;
}

